modules/aws_ecs/ecs-mi-servicio.tf
resource "aws_ecs_service" "nginx_service" {
  name            = "nginx-service"
  cluster         = aws_ecs_cluster.agd_ecs.id
  task_definition = aws_ecs_task_definition.nginx_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets          = [aws_subnet.default.id]
    security_groups  = [aws_security_group.default.id]
    assign_public_ip = true
  }
}
